force-app/main/default/objects/Amenities__c/Amenities__c.object-meta.xml
<CustomObject>
    <description>Amenities</description>
    <label>Amenities</label>
    <nameField>
        <label>Amenities Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amenities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>