force-app/main/default/objects/Amenities__c/fields/accesslevel__c.field-meta.xml
<CustomField>
    <fullName>accesslevel__c</fullName>
    <label>Access Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Building</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>