force-app/main/default/objects/Amenities__c/fields/bookingFee__c.field-meta.xml
<CustomField>
    <fullName>bookingFee__c</fullName>
    <label>Booking Fee</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>