force-app/main/default/objects/Amenities__c/fields/dailyEndTime__c.field-meta.xml
<CustomField>
    <fullName>dailyEndTime__c</fullName>
    <label>Daily End Time</label>
    <type>Time</type>
</CustomField>