force-app/main/default/objects/Amenities__c/fields/dailyStartTime__c.field-meta.xml
<CustomField>
    <fullName>dailyStartTime__c</fullName>
    <label>Daily Start Time</label>
    <type>Time</type>
</CustomField>