force-app/main/default/objects/Amenities__c/fields/isPaid__c.field-meta.xml
<CustomField>
    <fullName>isPaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Paid</label>
    <type>Checkbox</type>
</CustomField>