force-app/main/default/objects/Amenities__c/fields/isReservation__c.field-meta.xml
<CustomField>
    <fullName>isReservation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Reservation</label>
    <type>Checkbox</type>
</CustomField>