force-app/main/default/objects/Amenities__c/fields/slotDurationInMinutes__c.field-meta.xml
<CustomField>
    <fullName>slotDurationInMinutes__c</fullName>
    <label>Slot Duration In Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>