force-app/main/default/objects/Amenities__c/fields/termsAndConditions__c.field-meta.xml
<CustomField>
    <fullName>termsAndConditions__c</fullName>
    <label>Terms and Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>